# ompragash-pypi

./: README.md  pyproject.toml
src/ompragash/: ompragash.py
src/ompragash.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
