[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ompragash"
version = "0.0.1"
authors = [
  { name="Ompragash Viswanathan" },
]
description = "Ompragash's Personal Package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ompragash/ompragash-pypi"
"Bug Tracker" = "https://github.com/ompragash/ompragash-pypi/issues"
